Update titles and descriptions for consistency across index and resume pages

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patrick Taylor — Freelance Fullstack Developer | Auckland, NZ</title>
+    <title>Patrick Taylor — Full-Stack Developer & Digital Solutions | Auckland, NZ</title>
     <meta
       name="description"
-      content="Freelance fullstack developer and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
+      content="Full-Stack Developer & Digital Solutions, and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
     />
     <meta
       name="keywords"
-      content="freelance developer, fullstack developer, web developer, backend developer, Auckland developer, New Zealand developer, Patrick Taylor"
+      content="full-stack developer, digital solutions, web developer, backend developer, Auckland developer, New Zealand developer, Patrick Taylor"
     />
     <meta name="author" content="Patrick Taylor" />
     <link rel="canonical" href="https://ptrcktylr.com/" />
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:description"
-      content="Freelance Fullstack Developer | Web & Backend Development"
+      content="Full-Stack Developer & Digital Solutions"
     />
     <meta
       property="og:image"
@@ -42,7 +42,7 @@
     />
     <meta
       property="twitter:description"
-      content="Freelance Fullstack Developer | Web & Backend Development"
+      content="Full-Stack Developer & Digital Solutions"
     />
     <meta
       property="twitter:image"
@@ -57,8 +57,8 @@
         "name": "Patrick Taylor",
         "url": "https://ptrcktylr.com",
         "image": "https://ptrcktylr.com/images/art/photos/IMG_0082.jpg",
-        "jobTitle": "Freelance Fullstack Developer",
-        "description": "Freelance fullstack developer and future psychiatrist",
+        "jobTitle": "Full-Stack Developer & Digital Solutions",
+        "description": "Full-Stack Developer & Digital Solutions, and future psychiatrist",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Auckland",
@@ -115,7 +115,7 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
           <h1>Patrick Taylor</h1>
-          <p class="subtitle">Freelance Fullstack Developer</p>
+          <p class="subtitle">Full-Stack Developer & Digital Solutions</p>
           <p class="location">Auckland, NZ / New York, NY</p>
         </div>
       </section>
@@ -223,7 +223,7 @@
           <h2 class="section-title">About</h2>
           <div class="about-content">
             <p>
-              Freelance fullstack developer currently based in Auckland, NZ.
+              Full-stack developer & digital solutions currently based in Auckland, NZ.
               Originally from New York. Previously a software engineer at
               Equifax working on cloud platforms and reliability.
             </p>
