--- a/resume.html
+++ b/resume.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume - Patrick Taylor | Freelance Fullstack Developer</title>
+    <title>Resume - Patrick Taylor | Full-Stack Developer & Digital Solutions</title>
     <meta
       name="description"
-      content="Freelance fullstack developer with experience in cloud platforms, Java/Spring Boot, and GCP. Previously at Equifax."
+      content="Full-Stack Developer & Digital Solutions with experience in cloud platforms, Java/Spring Boot, and GCP. Previously at Equifax."
     />
     <meta
       name="keywords"
-      content="resume, CV, fullstack developer, Java, Spring Boot, GCP, Google Cloud, Equifax, cloud engineer"
+      content="resume, CV, full-stack developer, digital solutions, Java, Spring Boot, GCP, Google Cloud, Equifax, cloud engineer"
     />
     <meta name="author" content="Patrick Taylor" />
     <link rel="canonical" href="https://ptrcktylr.com/resume.html" />
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Patrick Taylor — Resume" />
     <meta
       property="og:description"
-      content="Freelance fullstack developer with experience in cloud platforms, Java/Spring Boot, and GCP. Previously at Equifax."
+      content="Full-Stack Developer & Digital Solutions with experience in cloud platforms, Java/Spring Boot, and GCP. Previously at Equifax."
     />
     <meta
       property="og:image"
@@ -59,7 +59,7 @@
       <div class="container">
         <header class="resume-header">
           <h1>Patrick Taylor</h1>
-          <p class="resume-tagline">Freelance Fullstack Developer</p>
+          <p class="resume-tagline">Full-Stack Developer & Digital Solutions</p>
           <div class="resume-contact">
             <span>Auckland, New Zealand</span>
             <span>•</span>
