Add animation to hero title for enhanced visual appeal

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       }
     </script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
@@ -114,7 +115,7 @@
         </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-          <h1>Patrick Taylor</h1>
+          <h1 class="animate__animated animate__pulse">Patrick Taylor</h1>
           <p class="subtitle">Full-Stack Developer & Digital Solutions</p>
           <p class="location">Auckland, NZ / New York, NY</p>
         </div>
