Refactor HTML structure for improved readability and update hero title animation for enhanced visual impact

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patrick Taylor — Full-Stack Developer & Digital Solutions | Auckland, NZ</title>
+    <title>
+      Patrick Taylor — Full-Stack Developer & Digital Solutions | Auckland, NZ
+    </title>
     <meta
       name="description"
       content="Full-Stack Developer & Digital Solutions, and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
@@ -18,10 +20,7 @@
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ptrcktylr.com/" />
-    <meta
-      property="og:title"
-      content="Patrick Taylor"
-    />
+    <meta property="og:title" content="Patrick Taylor" />
     <meta
       property="og:description"
       content="Full-Stack Developer & Digital Solutions"
@@ -36,10 +35,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ptrcktylr.com/" />
-    <meta
-      property="twitter:title"
-      content="Patrick Taylor"
-    />
+    <meta property="twitter:title" content="Patrick Taylor" />
     <meta
       property="twitter:description"
       content="Full-Stack Developer & Digital Solutions"
@@ -76,7 +72,10 @@
       }
     </script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
@@ -115,7 +114,7 @@
         </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-          <h1 class="animate__animated animate__pulse">Patrick Taylor</h1>
+          <h1 class="animate__animated animate__fadeInDown">Patrick Taylor</h1>
           <p class="subtitle">Full-Stack Developer & Digital Solutions</p>
           <p class="location">Auckland, NZ / New York, NY</p>
         </div>
@@ -224,9 +223,9 @@
           <h2 class="section-title">About</h2>
           <div class="about-content">
             <p>
-              Full-stack developer & digital solutions currently based in Auckland, NZ.
-              Originally from New York. Previously a software engineer at
-              Equifax working on cloud platforms and reliability.
+              Full-stack developer & digital solutions currently based in
+              Auckland, NZ. Originally from New York. Previously a software
+              engineer at Equifax working on cloud platforms and reliability.
             </p>
             <p>
               I build things with code. Sometimes they're practical, sometimes
