Add new article

--- a/psych.html
+++ b/psych.html
@@ -101,6 +101,23 @@
             <div class="resource-card">
               <h3>
                 <a
+                  href="https://www.psychiatrictimes.com/view/what-happened-to-psychopathology"
+                  target="_blank"
+                  >What Happened to Psychopathology?</a
+                >
+              </h3>
+              <p class="resource-description">
+                S. Nassir Ghaemi, MD, MPH and Mark L. Ruffalo, MSW, DPsa —
+                arguing that American psychiatry has shifted from phenomenology
+                to DSM criteria, sacrificing diagnostic validity for
+                reliability, and emphasizing the need to return to
+                psychopathology's roots.
+              </p>
+            </div>
+
+            <div class="resource-card">
+              <h3>
+                <a
                   href="https://neurosciencenews.com/consciousness-computing-ai-30068/"
                   target="_blank"
                   >Consciousness May Require a New Kind of Computation</a
