docs: Update 'The Deep Self' book link and apply consistent formatting to `psych.html`.

--- a/psych.html
+++ b/psych.html
@@ -1,203 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Psychology & Psychiatry Resources - Patrick Taylor</title>
-    <meta
-      name="description"
-      content="Research, books, and resources on consciousness, psychopathology, and psychedelic science."
-    />
-    <meta
-      name="keywords"
-      content="psychology, psychiatry, consciousness, psychedelic science, Jung, psychopathology, neuroscience"
-    />
-    <meta name="author" content="Patrick Taylor" />
-    <link rel="canonical" href="https://ptrcktylr.com/psych.html" />
 
-    <!-- Open Graph / Social Media -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ptrcktylr.com/psych.html" />
-    <meta
-      property="og:title"
-      content="Patrick Taylor — Psychology & Psychiatry"
-    />
-    <meta
-      property="og:description"
-      content="Research, books, and resources on consciousness, psychopathology, and psychedelic science."
-    />
-    <meta
-      property="og:image"
-      content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Psychology & Psychiatry Resources - Patrick Taylor</title>
+  <meta name="description"
+    content="Research, books, and resources on consciousness, psychopathology, and psychedelic science." />
+  <meta name="keywords"
+    content="psychology, psychiatry, consciousness, psychedelic science, Jung, psychopathology, neuroscience" />
+  <meta name="author" content="Patrick Taylor" />
+  <link rel="canonical" href="https://ptrcktylr.com/psych.html" />
 
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/psych.css" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  </head>
-  <body>
-    <nav class="nav">
-      <div class="nav-container">
-        <a href="index.html" class="logo">PT</a>
-        <ul class="nav-links">
-          <li><a href="index.html#work">work</a></li>
-          <li><a href="art.html">art</a></li>
-          <li><a href="resume.html">resume</a></li>
-          <li><a href="psych.html">psych</a></li>
-          <li><a href="index.html#about">about</a></li>
-          <li>
-            <button
-              id="theme-toggle"
-              class="theme-toggle"
-              aria-label="Toggle dark mode"
-            >
-              <span class="theme-icon">◐</span>
-            </button>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ptrcktylr.com/psych.html" />
+  <meta property="og:title" content="Patrick Taylor — Psychology & Psychiatry" />
+  <meta property="og:description"
+    content="Research, books, and resources on consciousness, psychopathology, and psychedelic science." />
+  <meta property="og:image" content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg" />
 
-    <main class="psych-page">
-      <div class="container">
-        <header class="page-header">
-          <h1>Psychology & Psychiatry</h1>
-          <p class="page-intro">
-            Research papers, frameworks, and books on consciousness,
-            psychopathology, and psychedelic science.
-          </p>
-        </header>
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/psych.css" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+</head>
 
-        <section class="content-section">
-          <h2>Currently Reading</h2>
-          <div class="resource-grid">
-            <div class="resource-card book-card">
-              <img
-                src="images/books/the-deep-self-lilly.jpg"
-                alt="The Deep Self cover"
-                class="book-cover"
-              />
-              <div class="book-content">
-                <h3>
-                  <a
-                    href="https://www.goodreads.com/book/show/297556.The_Deep_Self"
-                    target="_blank"
-                    >The Deep Self</a
-                  >
-                </h3>
-                <p class="resource-description">
-                  John C. Lilly — exploration of consciousness, isolation tanks,
-                  and the inner landscape of the mind through scientific
-                  experimentation and introspection.
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
+<body>
+  <nav class="nav">
+    <div class="nav-container">
+      <a href="index.html" class="logo">PT</a>
+      <ul class="nav-links">
+        <li><a href="index.html#work">work</a></li>
+        <li><a href="art.html">art</a></li>
+        <li><a href="resume.html">resume</a></li>
+        <li><a href="psych.html">psych</a></li>
+        <li><a href="index.html#about">about</a></li>
+        <li>
+          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+            <span class="theme-icon">◐</span>
+          </button>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-        <section class="content-section">
-          <h2>Research & Articles</h2>
-          <div class="resource-grid">
-            <div class="resource-card">
+  <main class="psych-page">
+    <div class="container">
+      <header class="page-header">
+        <h1>Psychology & Psychiatry</h1>
+        <p class="page-intro">
+          Research papers, frameworks, and books on consciousness,
+          psychopathology, and psychedelic science.
+        </p>
+      </header>
+
+      <section class="content-section">
+        <h2>Currently Reading</h2>
+        <div class="resource-grid">
+          <div class="resource-card book-card">
+            <img src="images/books/the-deep-self-lilly.jpg" alt="The Deep Self cover" class="book-cover" />
+            <div class="book-content">
               <h3>
-                <a
-                  href="https://www.psychiatrictimes.com/view/what-happened-to-psychopathology"
-                  target="_blank"
-                  >What Happened to Psychopathology?</a
-                >
+                <a href="https://www.goodreads.com/book/show/803412.The_Deep_Self" target="_blank">The Deep Self</a>
               </h3>
               <p class="resource-description">
-                S. Nassir Ghaemi, MD, MPH and Mark L. Ruffalo, MSW, DPsa —
-                arguing that American psychiatry has shifted from phenomenology
-                to DSM criteria, sacrificing diagnostic validity for
-                reliability, and emphasizing the need to return to
-                psychopathology's roots.
-              </p>
-            </div>
-
-            <div class="resource-card">
-              <h3>
-                <a
-                  href="https://neurosciencenews.com/consciousness-computing-ai-30068/"
-                  target="_blank"
-                  >Consciousness May Require a New Kind of Computation</a
-                >
-              </h3>
-              <p class="resource-description">
-                Neuroscience News — exploring computational theories of
-                consciousness and their implications for AI.
-              </p>
-            </div>
-
-            <div class="resource-card">
-              <h3>
-                <a href="https://www.psychopathia.ai/" target="_blank"
-                  >Psychopathia Machinalis: A Nosological Framework for
-                  Understanding Pathologies in Advanced Artificial
-                  Intelligence</a
-                >
-              </h3>
-              <p class="resource-description">
-                Nell Watson and Ali Hessami — a conceptual framework for
-                synthetic nosology within machine psychology, categorizing 32
-                maladaptive AI behaviors across seven domains.
-              </p>
-            </div>
-
-            <div class="resource-card">
-              <h3>
-                <a
-                  href="https://www.sciencedirect.com/science/article/pii/S002839082500396X"
-                  target="_blank"
-                  >Exploring the effects of microdosing on health behaviour
-                  change</a
-                >
-              </h3>
-              <p class="resource-description">
-                Prochazkova et al., Neuropharmacology (2026) — mixed-method
-                study investigating self-reported health behavior changes and
-                psychological mechanisms associated with psychedelic
-                microdosing.
+                John C. Lilly — exploration of consciousness, isolation tanks,
+                and the inner landscape of the mind through scientific
+                experimentation and introspection.
               </p>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <section class="content-section">
-          <h2>Recommended Reading</h2>
-          <div class="resource-grid">
-            <div class="resource-card book-card">
-              <img
-                src="images/books/jung-very-short-introduction.jpg"
-                alt="Jung: A Very Short Introduction cover"
-                class="book-cover"
-              />
-              <div class="book-content">
-                <h3>
-                  <a
-                    href="https://www.goodreads.com/book/show/297554.Jung"
-                    target="_blank"
-                    >Jung: A Very Short Introduction</a
-                  >
-                </h3>
-                <p class="resource-description">
-                  Anthony Stevens — a lucid introduction to Jungian psychology,
-                  explaining the collective unconscious, archetypes, shadow,
-                  persona, anima, animus, and the individualization of the Self.
-                </p>
-              </div>
+      <section class="content-section">
+        <h2>Research & Articles</h2>
+        <div class="resource-grid">
+          <div class="resource-card">
+            <h3>
+              <a href="https://www.psychiatrictimes.com/view/what-happened-to-psychopathology" target="_blank">What
+                Happened to Psychopathology?</a>
+            </h3>
+            <p class="resource-description">
+              S. Nassir Ghaemi, MD, MPH and Mark L. Ruffalo, MSW, DPsa —
+              arguing that American psychiatry has shifted from phenomenology
+              to DSM criteria, sacrificing diagnostic validity for
+              reliability, and emphasizing the need to return to
+              psychopathology's roots.
+            </p>
+          </div>
+
+          <div class="resource-card">
+            <h3>
+              <a href="https://neurosciencenews.com/consciousness-computing-ai-30068/" target="_blank">Consciousness May
+                Require a New Kind of Computation</a>
+            </h3>
+            <p class="resource-description">
+              Neuroscience News — exploring computational theories of
+              consciousness and their implications for AI.
+            </p>
+          </div>
+
+          <div class="resource-card">
+            <h3>
+              <a href="https://www.psychopathia.ai/" target="_blank">Psychopathia Machinalis: A Nosological Framework
+                for
+                Understanding Pathologies in Advanced Artificial
+                Intelligence</a>
+            </h3>
+            <p class="resource-description">
+              Nell Watson and Ali Hessami — a conceptual framework for
+              synthetic nosology within machine psychology, categorizing 32
+              maladaptive AI behaviors across seven domains.
+            </p>
+          </div>
+
+          <div class="resource-card">
+            <h3>
+              <a href="https://www.sciencedirect.com/science/article/pii/S002839082500396X" target="_blank">Exploring
+                the effects of microdosing on health behaviour
+                change</a>
+            </h3>
+            <p class="resource-description">
+              Prochazkova et al., Neuropharmacology (2026) — mixed-method
+              study investigating self-reported health behavior changes and
+              psychological mechanisms associated with psychedelic
+              microdosing.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="content-section">
+        <h2>Recommended Reading</h2>
+        <div class="resource-grid">
+          <div class="resource-card book-card">
+            <img src="images/books/jung-very-short-introduction.jpg" alt="Jung: A Very Short Introduction cover"
+              class="book-cover" />
+            <div class="book-content">
+              <h3>
+                <a href="https://www.goodreads.com/book/show/297554.Jung" target="_blank">Jung: A Very Short
+                  Introduction</a>
+              </h3>
+              <p class="resource-description">
+                Anthony Stevens — a lucid introduction to Jungian psychology,
+                explaining the collective unconscious, archetypes, shadow,
+                persona, anima, animus, and the individualization of the Self.
+              </p>
             </div>
           </div>
-        </section>
-      </div>
-    </main>
+        </div>
+      </section>
+    </div>
+  </main>
 
-    <footer class="footer">
-      <div class="container">
-        <p>&copy; 2026 Patrick Taylor</p>
-      </div>
-    </footer>
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2026 Patrick Taylor</p>
+    </div>
+  </footer>
 
-    <script src="js/main.js"></script>
-  </body>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
