Add CTA banner and featured project card to the homepage
- Introduced a new CTA banner with a call-to-action for website inquiries.
- Added a featured project card for "BuildRight NZ" showcasing project details, case study, and testimonial.
- Created a placeholder SVG for project images.
- Updated styles for the new components, including responsive adjustments for mobile views.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,46 @@
       <section id="work" class="section">
         <div class="container">
           <h2 class="section-title">Selected Work</h2>
+
+          <!-- CTA Banner -->
+          <div class="work-cta">
+            <h3>Need a website that converts?</h3>
+            <p>Let's build something that drives results for your business.</p>
+            <a href="mailto:me@ptrcktylr.com" class="cta-button">Get in Touch</a>
+          </div>
+
           <div class="projects-grid">
+            <!-- Featured: BuildRight NZ -->
+            <div class="project-card featured">
+              <div class="project-image">
+                <img src="images/projects/placeholder.svg" alt="BuildRight NZ website screenshot" loading="lazy">
+              </div>
+              <div class="project-header">
+                <h3>BuildRight NZ</h3>
+                <span class="project-tag">Web Design</span>
+              </div>
+              <div class="project-case-study">
+                <div class="case-study-section">
+                  <strong>Challenge:</strong> Construction company needed a modern web presence to attract Auckland homeowners and showcase renovation work.
+                </div>
+                <div class="case-study-section">
+                  <strong>Solution:</strong> Built a conversion-focused landing page with interactive before/after slider, instant quote form, and dark/light mode. Fully responsive with optimized performance.
+                </div>
+              </div>
+              <div class="project-testimonial">
+                <p>"Professional, modern design that perfectly represents our brand. The interactive features really help showcase our transformations."</p>
+                <span class="testimonial-author">— BuildRight NZ Team</span>
+              </div>
+              <div class="project-links">
+                <a
+                  href="buildright-nz.html"
+                  target="_blank"
+                  class="link"
+                  >View Live Demo</a
+                >
+              </div>
+            </div>
+
             <div class="project-card">
               <div class="project-header">
                 <h3>Portfolio Sites</h3>
