--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="nav-container">
         <a href="index.html" class="logo">PT</a>
         <ul class="nav-links">
-          <li><a href="#work">work</a></li>
+          <li><a href="work.html">work</a></li>
           <li><a href="art.html">art</a></li>
           <li><a href="resume.html">resume</a></li>
           <li><a href="psych.html">psych</a></li>
@@ -117,42 +117,25 @@
           <h1 class="animate__animated animate__fadeInDown">Patrick Taylor</h1>
           <p class="subtitle">Full-Stack Developer & Digital Solutions</p>
           <p class="location">Auckland, NZ / New York, NY</p>
+          <div class="hero-cta">
+            <a href="work.html" class="cta-button-hero">View My Work</a>
+            <a href="mailto:me@ptrcktylr.com" class="cta-button-hero secondary">Get in Touch</a>
+          </div>
         </div>
       </section>
 
       <section id="work" class="section">
         <div class="container">
           <h2 class="section-title">Selected Work</h2>
-
-          <!-- CTA Banner -->
-          <div class="work-cta">
-            <h3>Need a website that converts?</h3>
-            <p>Let's build something that drives results for your business.</p>
-            <a href="mailto:me@ptrcktylr.com" class="cta-button">Get in Touch</a>
-          </div>
-
           <div class="projects-grid">
-            <!-- Featured: BuildRight NZ -->
-            <div class="project-card featured">
-              <div class="project-image">
-                <img src="images/projects/placeholder.svg" alt="BuildRight NZ website screenshot" loading="lazy">
-              </div>
+            <div class="project-card">
               <div class="project-header">
                 <h3>BuildRight NZ</h3>
                 <span class="project-tag">Web Design</span>
               </div>
-              <div class="project-case-study">
-                <div class="case-study-section">
-                  <strong>Challenge:</strong> Construction company needed a modern web presence to attract Auckland homeowners and showcase renovation work.
-                </div>
-                <div class="case-study-section">
-                  <strong>Solution:</strong> Built a conversion-focused landing page with interactive before/after slider, instant quote form, and dark/light mode. Fully responsive with optimized performance.
-                </div>
-              </div>
-              <div class="project-testimonial">
-                <p>"Professional, modern design that perfectly represents our brand. The interactive features really help showcase our transformations."</p>
-                <span class="testimonial-author">— BuildRight NZ Team</span>
-              </div>
+              <p class="project-description">
+                Modern landing page for Auckland construction company with interactive before/after slider, quote form, and dark mode.
+              </p>
               <div class="project-links">
                 <a
                   href="buildright-nz.html"
