Refactor navigation links to point to the correct work page and enhance work CTA section styling

--- a/psych.html
+++ b/psych.html
@@ -30,7 +30,7 @@
     <div class="nav-container">
       <a href="index.html" class="logo">PT</a>
       <ul class="nav-links">
-        <li><a href="index.html#work">work</a></li>
+        <li><a href="work.html">work</a></li>
         <li><a href="art.html">art</a></li>
         <li><a href="resume.html">resume</a></li>
         <li><a href="psych.html">psych</a></li>
