--- a/work.html
+++ b/work.html
@@ -46,17 +46,6 @@
         </div>
       </section>
 
-      <!-- CTA Banner -->
-      <section class="section">
-        <div class="container">
-          <div class="work-cta">
-            <h3>Need a website that converts?</h3>
-            <p>Let's build something that drives results for your business.</p>
-            <a href="mailto:me@ptrcktylr.com" class="cta-button">Get in Touch</a>
-          </div>
-        </div>
-      </section>
-
       <!-- Featured Project: BuildRight NZ -->
       <section class="section featured-project-section">
         <div class="container">
@@ -112,9 +101,9 @@
       </section>
 
       <!-- Other Projects -->
-      <section class="section">
+      <section class="section other-projects-section">
         <div class="container">
-          <h2 class="section-title">More Projects</h2>
+          <h2 class="section-title">Other Projects</h2>
           <div class="projects-grid">
             <div class="project-card">
               <div class="project-header">
@@ -206,6 +195,17 @@
                 >
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA Banner -->
+      <section class="section work-cta-section">
+        <div class="container">
+          <div class="work-cta">
+            <h3>Need a website that converts?</h3>
+            <p>Let's build something that drives results for your business.</p>
+            <a href="mailto:me@ptrcktylr.com" class="cta-button">Get in Touch</a>
           </div>
         </div>
       </section>
