Add BuildRight NZ project image and improve formatting in work page

--- a/work.html
+++ b/work.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -42,7 +42,9 @@
       <section class="page-hero">
         <div class="container">
           <h1>Work</h1>
-          <p class="page-subtitle">Custom websites and digital solutions that drive results</p>
+          <p class="page-subtitle">
+            Custom websites and digital solutions that drive results
+          </p>
         </div>
       </section>
 
@@ -55,12 +57,18 @@
                 <h2>BuildRight NZ</h2>
                 <span class="project-tag">Web Design & Development</span>
               </div>
-              <a href="buildright-nz.html" target="_blank" class="cta-button">View Live Demo</a>
+              <a href="buildright-nz.html" target="_blank" class="cta-button"
+                >View Live Demo</a
+              >
             </div>
 
             <div class="featured-project-image">
               <a href="buildright-nz.html" target="_blank">
-                <img src="images/projects/placeholder.svg" alt="BuildRight NZ website screenshot" loading="lazy">
+                <img
+                  src="images/projects/buildright-nz.png"
+                  alt="BuildRight NZ website screenshot"
+                  loading="lazy"
+                />
               </a>
             </div>
 
@@ -68,14 +76,22 @@
               <div class="featured-project-details">
                 <div class="detail-block">
                   <h3>The Challenge</h3>
-                  <p>A construction company in Auckland needed a modern web presence to attract homeowners and showcase their renovation work. They wanted to stand out in a competitive market and make it easy for potential clients to request quotes.</p>
+                  <p>
+                    A construction company in Auckland needed a modern web
+                    presence to attract homeowners and showcase their renovation
+                    work. They wanted to stand out in a competitive market and
+                    make it easy for potential clients to request quotes.
+                  </p>
                 </div>
 
                 <div class="detail-block">
                   <h3>The Solution</h3>
                   <p>Built a conversion-focused landing page featuring:</p>
                   <ul>
-                    <li>Interactive before/after slider to showcase transformations</li>
+                    <li>
+                      Interactive before/after slider to showcase
+                      transformations
+                    </li>
                     <li>Instant quote form with project type selection</li>
                     <li>Dark/light mode toggle for user preference</li>
                     <li>Fully responsive design optimized for mobile</li>
@@ -85,13 +101,17 @@
 
                 <div class="detail-block">
                   <h3>Technologies</h3>
-                  <p class="tech-stack">HTML5, CSS3, Vanilla JavaScript, Responsive Design</p>
+                  <p class="tech-stack">
+                    HTML5, CSS3, Vanilla JavaScript, Responsive Design
+                  </p>
                 </div>
               </div>
 
               <div class="featured-project-testimonial">
                 <blockquote>
-                  "Professional, modern design that perfectly represents our brand. The interactive features really help showcase our transformations to potential clients."
+                  "Professional, modern design that perfectly represents our
+                  brand. The interactive features really help showcase our
+                  transformations to potential clients."
                 </blockquote>
                 <cite>— BuildRight NZ Team</cite>
               </div>
@@ -205,7 +225,9 @@
           <div class="work-cta">
             <h3>Need a website that converts?</h3>
             <p>Let's build something that drives results for your business.</p>
-            <a href="mailto:me@ptrcktylr.com" class="cta-button">Get in Touch</a>
+            <a href="mailto:me@ptrcktylr.com" class="cta-button"
+              >Get in Touch</a
+            >
           </div>
         </div>
       </section>
