Highlight active navigation links in art and resume pages for improved user experience

--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
         <ul class="nav-links">
           <li><a href="work.html">work</a></li>
           <li><a href="art.html">art</a></li>
-          <li><a href="resume.html">resume</a></li>
+          <li><a href="resume.html" class="active">resume</a></li>
           <li><a href="psych.html">psych</a></li>
           <li><a href="index.html#about">about</a></li>
           <li>
