--- a/art.html
+++ b/art.html
@@ -38,7 +38,7 @@
         <a href="index.html" class="logo">PT</a>
         <ul class="nav-links">
           <li><a href="work.html">work</a></li>
-          <li><a href="art.html">art</a></li>
+          <li><a href="art.html" class="active">art</a></li>
           <li><a href="resume.html">resume</a></li>
           <li><a href="psych.html">psych</a></li>
           <li><a href="index.html#about">about</a></li>
